[workspace]
members = [
    "channel-escrow",
    "escrow-factory",
    "near-ibc",
    "token-factory",
    "utils",
    "wrapped-token",
]
resolver = "2"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[patch.crates-io]
ibc = { git = "https://github.com/octopus-network/ibc-rs.git", branch = "octopus-relayer-v0.42.0" }
ibc-proto = { git = "https://github.com/octopus-network/ibc-proto-rs.git", branch = "octopus-relayer-v0.32.0" }
ics23 = { git = "https://github.com/octopus-network/ics23.git", branch = "for-near-ibc-pre2" }
