[package]
name = "near-ibc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.0"
near-contract-standards = "4.1.0"
ibc = { version = "0.41.0", default-features = false, features = ["borsh", "serde"]}
ibc-proto = { version = "0.32.0", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
itertools = "0.10.5"
serde = "1.0"
getrandom = { version = "0.2", features = ["custom"] }
token-factory = { path = "../token-factory" }
utils = { path = "../utils" }
ics06-solomachine = { git = "https://github.com/octopus-network/ics06-solomachine.git", branch = "for-near-ibc-pre2" }
