[package]
name = "near-ibc"
version = "1.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true }
sha2 = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
getrandom = { workspace = true }
tendermint = { workspace = true }
hex = { workspace = true }
octopus-lpos = { workspace = true }
token-factory = { path = "../token-factory" }
utils = { path = "../utils" }
