[package]
name = "token-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# near-sdk = "4.1.0"
near-sdk = { git = "https://github.com/near/near-sdk-rs", branch = "master" }
# near-contract-standards = "4.1.0"
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", branch = "master" }
hex = "0.4"
utils = { path = "../utils" }
